[package]
name = "rust-kzg-tutorial"
version = "0.1.0"
edition = "2021"
authors = ["Rust KZG Tutorial Contributors"]
description = "完整的 Rust KZG 密码学库教程与示例"
readme = "README.md"
repository = "https://github.com/your-username/rust-kzg-tutorial"
license = "MIT"
keywords = ["cryptography", "kzg", "polynomial", "commitment", "tutorial"]
categories = ["cryptography", "tutorial", "development-tools"]

[dependencies]
# Rust KZG 密码学库 - 来自官方仓库
# 高级用户可通过 .cargo/config.toml 覆盖为本地路径（见 .cargo/config.toml.example）
kzg = { git = "https://github.com/grandinetech/rust-kzg.git", package = "kzg" }
rust-kzg-blst = { git = "https://github.com/grandinetech/rust-kzg.git", package = "rust-kzg-blst" }

# 用于示例的其他依赖
log = "0.4"
env_logger = "0.10"
rand = "0.8"
hex = "0.4"
num_cpus = "1.0"
rayon = { version = "1.7", optional = true }
sha2 = "0.10"

# 第16章生产环境部署依赖
tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.4", features = ["cors", "trace", "compression-br", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
anyhow = "1.0"
thiserror = "1.0"
lru = "0.12"

[[example]]
name = "chapter01_basics"
path = "examples/chapter01_basics.rs"

[[example]]
name = "chapter02_kzg_deep_dive"
path = "examples/chapter02_kzg_deep_dive.rs"

[[example]]
name = "chapter03_eip4844_application"
path = "examples/chapter03_eip4844_application.rs"

[[example]]
name = "chapter04_architecture_design"
path = "examples/chapter04_architecture_design.rs"

[[example]]
name = "chapter05_core_trait_system"
path = "examples/chapter05_core_trait_system.rs"

[[example]]
name = "chapter06_module_organization"
path = "examples/chapter06_module_organization.rs"

[[example]]
name = "chapter07_eip7594_das"
path = "examples/chapter07_eip7594_das.rs"

[[example]]
name = "chapter08_blst_backend"
path = "examples/chapter08_blst_backend.rs"

[[example]]
name = "hello_kzg"
path = "examples/hello_kzg.rs"

[features]
default = []
parallel = ["rayon"]

[profile.release]
opt-level = 3
lto = "thin"

[[example]]
name = "chapter16_production_deployment"
path = "examples/chapter16_production_deployment.rs"

[[example]]
name = "chapter17_troubleshooting_maintenance"
path = "examples/chapter17_troubleshooting_maintenance.rs"

[[example]]
name = "chapter18_new_feature_development"
path = "examples/chapter18_new_feature_development.rs"

[[example]]
name = "chapter19_ecosystem_expansion"
path = "examples/chapter19_ecosystem_expansion.rs"

[[example]]
name = "chapter20_project_practical_cases"
path = "examples/chapter20_project_practical_cases.rs"
